docs: Comprehensive documentation update and project metadata enhancement
-  Complete README overhaul with detailed feature descriptions, installation guide, and usage instructions
-  Added CONTRIBUTING.md with development guidelines and contribution workflow
-  Added MIT LICENSE for open source compliance
-  Created CHANGELOG.md with version history and migration guide
-  Updated package.json with proper metadata, version 2.0.0, and repository information
-  Added .env.example template for easy environment setup
-  Created comprehensive docs/ folder with:
  - API.md: Complete API reference and component documentation
  - DEPLOYMENT.md: Multi-platform deployment guide with Docker, cloud platforms, and optimization strategies
-  Enhanced project professionalism and developer experience
-  Added proper links, badges, and community resources

--- a/package.json
+++ b/package.json
@@ -1,8 +1,29 @@
 {
-  "name": "typeforge:-modern-typing-master",
-  "private": true,
-  "version": "0.0.0",
+  "name": "typeforge-modern-typing-master",
+  "version": "2.0.0",
+  "description": "A sophisticated, AI-powered typing practice application with analytics dashboard and personalized coaching",
+  "private": false,
   "type": "module",
+  "keywords": [
+    "typing",
+    "practice", 
+    "ai",
+    "analytics",
+    "education",
+    "react",
+    "typescript",
+    "vite"
+  ],
+  "author": "Aditya1156",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Aditya1156/TypeForge.git"
+  },
+  "homepage": "https://github.com/Aditya1156/TypeForge#readme",
+  "bugs": {
+    "url": "https://github.com/Aditya1156/TypeForge/issues"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
