--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "keywords": [
     "typing",
-    "practice", 
+    "practice",
     "ai",
     "analytics",
     "education",
@@ -39,6 +39,7 @@
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "terser": "^5.43.1",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   }
