--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
   "name": "typingpath-modern-typing-master",
   "version": "2.0.0",
-  "description": "A sophisticated, AI-powered typing practice application with analytics dashboard and personalized coaching",
+  "description": "TypingPath - Modern typing master platform for learning touch typing. AI-powered lessons, real-time feedback, and gamified typing practice. Perfect for Vietnam typing and Vietnamese learners.",
   "private": false,
   "type": "module",
   "keywords": [
     "typing",
+    "typing-practice",
+    "touch-typing",
+    "typing-speed",
+    "typing-test",
+    "learn-typing",
+    "typing-lessons",
+    "vietnam-typing",
+    "vietnamese-typing",
+    "typing-master",
+    "keyboard-practice",
+    "typing-skills",
+    "wpm-test",
+    "typing-trainer",
+    "online-typing",
+    "typing-course",
+    "ai-powered",
     "practice",
-    "ai",
     "analytics",
     "education",
     "react",
