fix: correct Google Generative AI package import and API usage
- Replace incorrect @google/genai with @google/generative-ai package
- Update package.json with correct package version (^0.21.0)
- Fix API usage in geminiService.ts to use proper GoogleGenerativeAI class
- Update generateContent calls to use correct API structure
- Resolve import errors and restore AI coach functionality

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.8.0",
+    "@google/generative-ai": "^0.21.0",
     "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
