--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # TypeForge Environment Variables
 
 # Gemini AI API Key (Required for AI features)
-# Get your API key from: https://makersuite.google.com/app/apikey
+# Get your API key from: https://aistudio.google.com/app/apikey
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
 # Optional: Firebase Configuration (for cloud features)
