Rebrand: Complete TypeForge to TypingPath transition
- Updated project name across all documentation files
- Modified .env.example with correct API URLs and branding
- Updated CHANGELOG.md and CONTRIBUTING.md with new branding
- Refreshed PROJECT_SHOWCASE.md and PROJECT_SUMMARY.md
- Updated AuthContext gift code from TYPEFORGE2024 to TYPINGPATH2024
- Corrected developer contact information and GitHub links
- Ensured consistent TypingPath branding throughout project

All references now properly reflect TypingPath identity for professional presentation.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# TypeForge Environment Variables
+# TypingPath Environment Variables
 
 # Gemini AI API Key (Required for AI features)
 # Get your API key from: https://aistudio.google.com/app/apikey
